--- a/aio/package.json
+++ b/aio/package.json
@@ -103,6 +103,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect-cli": "0.1302.3",
     "@angular-devkit/build-angular": "13.2.3",
     "@angular-eslint/builder": "^13.0.0",
     "@angular-eslint/eslint-plugin": "^13.0.0",
