--- a/packages/bazel/src/api-extractor/BUILD.bazel
+++ b/packages/bazel/src/api-extractor/BUILD.bazel
@@ -1,8 +1,8 @@
-# BEGIN-DEV-ONLY
-package(default_visibility = ["//packages:__subpackages__"])
-
 load("//tools:defaults.bzl", "ts_library")
 load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
+
+# BEGIN-DEV-ONLY
+package(default_visibility = ["//packages:__subpackages__"])
 
 ts_library(
     name = "lib",
@@ -13,6 +13,8 @@ ts_library(
         "@npm//@bazel/typescript",
         "@npm//@microsoft/api-extractor",
         "@npm//@types/node",
+        "@npm//@bazel/concatjs",
+        # "@npm//@bazel/concatjs/bin:tsc_wrapped",
     ],
 )
 
