--- a/packages/bazel/src/ngc-wrapped/BUILD.bazel
+++ b/packages/bazel/src/ngc-wrapped/BUILD.bazel
@@ -1,6 +1,6 @@
 # BEGIN-DEV-ONLY
 load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
-load("@npm//@bazel/typescript:index.bzl", "ts_library")
+load("@npm//@bazel/concatjs:index.bzl", "ts_library")
 
 ts_library(
     name = "ngc_lib",
@@ -17,7 +17,9 @@ ts_library(
     deps = [
         "//packages/compiler-cli",
         "//packages/compiler-cli/private",
+        "@npm//@bazel/concatjs",
         "@npm//@bazel/typescript",
+        "@npm//@bazel/worker",
         "@npm//@types/node",
         "@npm//tsickle",
         "@npm//typescript",
