--- a/.bazelignore
+++ b/.bazelignore
@@ -5,10 +5,99 @@
 .git
 node_modules
 dist
-aio/content
 aio/node_modules
+aio/content/cli-src/node_modules
 aio/tools/examples/shared/node_modules
 packages/bazel/node_modules
+
+# Ignore symlinked example node_modules directories. We need to list each 
+# path due to https://github.com/bazelbuild/bazel/issues/8106. We should be
+# able to remove this after flipping the build to bazel. To regenerate this list,
+# run the following command from the root directory:
+#
+#    find -L aio/content/examples -maxdepth 2 -type d -name node_modules | sort
+
+aio/content/examples/accessibility/node_modules
+aio/content/examples/ajs-quick-reference/node_modules
+aio/content/examples/angular-compiler-options/node_modules
+aio/content/examples/animations/node_modules
+aio/content/examples/architecture/node_modules
+aio/content/examples/attribute-binding/node_modules
+aio/content/examples/attribute-directives/node_modules
+aio/content/examples/binding-syntax/node_modules
+aio/content/examples/bootstrapping/node_modules
+aio/content/examples/built-in-directives/node_modules
+aio/content/examples/built-in-template-functions/node_modules
+aio/content/examples/comparing-observables/node_modules
+aio/content/examples/component-interaction/node_modules
+aio/content/examples/component-overview/node_modules
+aio/content/examples/component-styles/node_modules
+aio/content/examples/content-projection/node_modules
+aio/content/examples/dependency-injection-in-action/node_modules
+aio/content/examples/dependency-injection/node_modules
+aio/content/examples/deprecation-guide/node_modules
+aio/content/examples/displaying-data/node_modules
+aio/content/examples/docs-style-guide/node_modules
+aio/content/examples/dynamic-component-loader/node_modules
+aio/content/examples/dynamic-form/node_modules
+aio/content/examples/elements/node_modules
+aio/content/examples/event-binding/node_modules
+aio/content/examples/feature-modules/node_modules
+aio/content/examples/forms/node_modules
+aio/content/examples/forms-overview/node_modules
+aio/content/examples/form-validation/node_modules
+aio/content/examples/getting-started/node_modules
+aio/content/examples/getting-started-v0/node_modules
+aio/content/examples/hierarchical-dependency-injection/node_modules
+aio/content/examples/http/node_modules
+aio/content/examples/i18n/node_modules
+aio/content/examples/inputs-outputs/node_modules
+aio/content/examples/interpolation/node_modules
+aio/content/examples/lazy-loading-ngmodules/node_modules
+aio/content/examples/lifecycle-hooks/node_modules
+aio/content/examples/ngcontainer/node_modules
+aio/content/examples/ngmodules/node_modules
+aio/content/examples/observables-in-angular/node_modules
+aio/content/examples/observables/node_modules
+aio/content/examples/pipes/node_modules
+aio/content/examples/practical-observable-usage/node_modules
+aio/content/examples/property-binding/node_modules
+aio/content/examples/providers/node_modules
+aio/content/examples/providers-viewproviders/node_modules
+aio/content/examples/reactive-forms/node_modules
+aio/content/examples/resolution-modifiers/node_modules
+aio/content/examples/router/node_modules
+aio/content/examples/router-tutorial/node_modules
+aio/content/examples/routing-with-urlmatcher/node_modules
+aio/content/examples/rx-library/node_modules
+aio/content/examples/schematics-for-libraries/node_modules
+aio/content/examples/security/node_modules
+aio/content/examples/service-worker-getting-started/node_modules
+aio/content/examples/set-document-title/node_modules
+aio/content/examples/setup/node_modules
+aio/content/examples/structural-directives/node_modules
+aio/content/examples/styleguide/node_modules
+aio/content/examples/template-expression-operators/node_modules
+aio/content/examples/template-reference-variables/node_modules
+aio/content/examples/template-syntax/node_modules
+aio/content/examples/testing/node_modules
+aio/content/examples/toh-pt0/node_modules
+aio/content/examples/toh-pt1/node_modules
+aio/content/examples/toh-pt2/node_modules
+aio/content/examples/toh-pt3/node_modules
+aio/content/examples/toh-pt4/node_modules
+aio/content/examples/toh-pt5/node_modules
+aio/content/examples/toh-pt6/node_modules
+aio/content/examples/two-way-binding/node_modules
+aio/content/examples/universal/node_modules
+aio/content/examples/upgrade-lazy-load-ajs/node_modules
+aio/content/examples/upgrade-module/node_modules
+aio/content/examples/upgrade-phonecat-1-typescript/node_modules
+aio/content/examples/upgrade-phonecat-2-hybrid/node_modules
+aio/content/examples/upgrade-phonecat-3-final/node_modules
+aio/content/examples/user-input/node_modules
+aio/content/examples/view-encapsulation/node_modules
+aio/content/examples/what-is-angular/node_modules
 
 # All integration test node_modules folders
 integration/bazel_workspace_tests/bazel_ngtsc_plugin/node_modules
