--- a/.bazelignore
+++ b/.bazelignore
@@ -5,9 +5,9 @@
 .git
 node_modules
 dist
-aio/content
+#aio/content
 aio/node_modules
-aio/tools/examples/shared/node_modules
+#aio/tools/examples/shared/node_modules
 packages/bazel/node_modules
 
 # All integration test node_modules folders
