--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -8,6 +8,8 @@ exports_files([
     "scripts/ci/payload-size.sh",
     "scripts/ci/payload-size.js",
     "package.json",
+    ".git",
+    "packages",
 ])
 
 alias(
