--- a/aio/package.json
+++ b/aio/package.json
@@ -114,6 +114,7 @@
     "@angular/cli": "13.2.5",
     "@angular/compiler-cli": "13.2.4",
     "@bazel/bazelisk": "^1.7.5",
+    "@bazel/typescript": "4.6.2",
     "@types/jasmine": "~3.10.0",
     "@types/lunr": "^2.3.3",
     "@types/node": "^12.7.9",
@@ -144,6 +145,7 @@
     "fs-extra": "^10.0.0",
     "globby": "^13.0.0",
     "hast-util-is-element": "^1.1.0",
+    "hast-util-has-property": "^1.0.4",
     "hast-util-to-string": "^1.0.4",
     "html": "^1.0.0",
     "ignore": "^5.1.8",
