--- a/aio/tools/examples/shared/package.json
+++ b/aio/tools/examples/shared/package.json
@@ -7,7 +7,8 @@
     "http-server": "http-server",
     "protractor": "protractor",
     "webdriver:update": "node ../../../../scripts/webdriver-manager-update.js",
-    "postinstall": "yarn webdriver:update",
+    "postinstall": "yarn webdriver:update && yarn add-empty-build-file",
+    "add-empty-build-file": "node --eval \"require('shelljs').echo('# Empty BUILD.bazel file to ignore node_modules in glob()s\\n').to('node_modules/BUILD.bazel')\"",
     "sync-deps": "node sync-boilerplate-dependencies"
   },
   "//engines-comment": "Keep this in sync with /package.json and /aio/package.json",
@@ -80,6 +81,7 @@
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-terser": "^5.3.0",
+    "shelljs": "^0.8.5",
     "source-map-explorer": "^1.3.2",
     "ts-node": "~10.1.0",
     "typescript": "~4.6.2"
