--- a/aio/package.json
+++ b/aio/package.json
@@ -103,6 +103,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@bazel/typescript": "4.6.0",
     "@angular-devkit/architect-cli": "0.1302.3",
     "@angular-devkit/build-angular": "13.2.3",
     "@angular-eslint/builder": "^13.0.0",
@@ -141,6 +142,7 @@
     "fs-extra": "^10.0.0",
     "globby": "^13.0.0",
     "hast-util-is-element": "^1.1.0",
+    "hast-util-has-property": "^1.0.4",
     "hast-util-to-string": "^1.0.4",
     "html": "^1.0.0",
     "ignore": "^5.1.8",
