--- a/aio/BUILD.bazel
+++ b/aio/BUILD.bazel
@@ -123,14 +123,13 @@ npm_package_bin(
     configuration_env_vars = ["PATH"],  # Need PATH for dgeni package that invokes git
     data = glob([
         "content/**",
-        "src/assets/**/*",
+        "src/assets/**",
         "tools/transforms/**",
     ]) + [
         "@aio_npm//css-selector-parser",
         "@aio_npm//dgeni-packages",
         "@aio_npm//entities",
         "@aio_npm//fs-extra",
-        "@aio_npm//hast-util-has-property",
         "@aio_npm//hast-util-is-element",
         "@aio_npm//hast-util-to-string",
         "@aio_npm//ignore",
@@ -139,13 +138,49 @@ npm_package_bin(
         "@aio_npm//rehype-slug",
         "@aio_npm//remark",
         "@aio_npm//remark-html",
+        "@aio_npm//rxjs",
         "@aio_npm//semver",
         "@aio_npm//stemmer",
         "@aio_npm//unist-util-filter",
         "@aio_npm//unist-util-source",
         "@cli_src//:files_for_docgen",
         "//:package.json",
+
         "//:packages",
+        # "//packages:files_for_docgen",
+        # "//packages:examples",
+        
+        # "//packages/animations:index.ts",
+        # "//packages/animations/browser:index.ts",
+        # "//packages/animations/browser/testing:index.ts",
+        # "//packages/common:index.ts",
+        # "//packages/common/http:index.ts",
+        # "//packages/common/http/testing:index.ts",
+        # "//packages/common/testing:index.ts",
+        # "//packages/common/upgrade:index.ts",
+        # "//packages/core:index.ts",
+        # "//packages/core:global/index.ts",
+        # "//packages/core/testing:index.ts",
+        # "//packages/elements:index.ts",
+        # "//packages/forms:index.ts",
+        # "//packages/localize:index.ts",
+        # "//packages/localize/init:index.ts",
+        # "//packages/platform-browser:index.ts",
+        # "//packages/platform-browser/animations:index.ts",
+        # "//packages/platform-browser/testing:index.ts",
+        # "//packages/platform-browser-dynamic:index.ts",
+        # "//packages/platform-browser-dynamic/testing:index.ts",
+        # "//packages/platform-server:index.ts",
+        # "//packages/platform-server/init:index.ts",
+        # "//packages/platform-server/testing:index.ts",
+        # "//packages/router:index.ts",
+        # "//packages/router/testing:index.ts",
+        # "//packages/router/upgrade:index.ts",
+        # "//packages/service-worker:index.ts",
+        # "//packages/upgrade:index.ts",
+        # "//packages/upgrade/static:index.ts",
+        # "//packages/upgrade/static/testing:index.ts",
+        # "//packages/core:PACKAGE.md",
     ],
     env = {
         "BAZEL_DGENI_OUTPUT_PATH": "$(@D)",
