--- a/packages/core/src/reflection/BUILD.bazel
+++ b/packages/core/src/reflection/BUILD.bazel
@@ -24,3 +24,10 @@ tsec_test(
     target = "reflection",
     tsconfig = "//packages:tsec_config",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+    ]),
+)
