--- a/packages/core/testing/BUILD.bazel
+++ b/packages/core/testing/BUILD.bazel
@@ -2,7 +2,7 @@ load("//tools:defaults.bzl", "ng_module")
 
 package(default_visibility = ["//visibility:public"])
 
-exports_files(["package.json"])
+exports_files(["package.json", "index.ts"])
 
 ng_module(
     name = "testing",
@@ -17,4 +17,13 @@ ng_module(
         "//packages/zone.js/lib:zone_d_ts",
         "@npm//@types/jasmine",
     ],
+)
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+        "src/**/*.ts",
+        "PACKAGE.md",
+    ]),
 )
