--- a/packages/upgrade/src/common/BUILD.bazel
+++ b/packages/upgrade/src/common/BUILD.bazel
@@ -14,3 +14,10 @@ ts_library(
         "//packages/core",
     ],
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "src/**/*.ts",
+    ]),
+)
