--- a/packages/animations/BUILD.bazel
+++ b/packages/animations/BUILD.bazel
@@ -59,3 +59,14 @@ api_golden_test(
     entry_point = "angular/packages/animations/browser/src/errors.d.ts",
     golden = "angular/goldens/public-api/animations/errors.md",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+        "src/**/*.ts",
+        "PACKAGE.md",
+    ], exclude = ["test"]) + [
+        "//packages/animations/browser:files_for_docgen",
+    ],
+)
