--- a/packages/common/BUILD.bazel
+++ b/packages/common/BUILD.bazel
@@ -87,3 +87,16 @@ api_golden_test(
     entry_point = "angular/packages/common/src/errors.d.ts",
     golden = "angular/goldens/public-api/common/errors.md",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+        "src/**/*.ts",
+        "PACKAGE.md",
+    ]) + [
+        "//packages/common/http:files_for_docgen",
+        "//packages/common/testing:files_for_docgen",
+        "//packages/common/upgrade:files_for_docgen",
+    ],
+)
