--- a/packages/core/src/compiler/BUILD.bazel
+++ b/packages/core/src/compiler/BUILD.bazel
@@ -24,3 +24,10 @@ tsec_test(
     target = "compiler",
     tsconfig = "//packages:tsec_config",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+    ]),
+)
