--- a/packages/core/src/di/interface/BUILD.bazel
+++ b/packages/core/src/di/interface/BUILD.bazel
@@ -26,3 +26,10 @@ tsec_test(
     target = "interface",
     tsconfig = "//packages:tsec_config",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+    ]),
+)
