--- a/packages/platform-browser/BUILD.bazel
+++ b/packages/platform-browser/BUILD.bazel
@@ -59,3 +59,16 @@ api_golden_test_npm_package(
     golden_dir = "angular/goldens/public-api/platform-browser",
     npm_package = "angular/packages/platform-browser/npm_package",
 )
+
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+        "src/**/*.ts",
+        "PACKAGE.md",
+    ]) + [
+        "//packages/platform-browser/animations:files_for_docgen",
+        "//packages/platform-browser/testing:files_for_docgen",
+    ],
+)
