--- a/packages/router/BUILD.bazel
+++ b/packages/router/BUILD.bazel
@@ -52,3 +52,15 @@ api_golden_test_npm_package(
     golden_dir = "angular/goldens/public-api/router",
     npm_package = "angular/packages/router/npm_package",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+        "src/**/*.ts",
+        "PACKAGE.md",
+    ]) + [
+        "//packages/router/upgrade:files_for_docgen",
+        "//packages/router/testing:files_for_docgen",
+    ],
+)
