--- a/packages/upgrade/BUILD.bazel
+++ b/packages/upgrade/BUILD.bazel
@@ -47,3 +47,15 @@ api_golden_test_npm_package(
     golden_dir = "angular/goldens/public-api/upgrade",
     npm_package = "angular/packages/upgrade/npm_package",
 )
+
+filegroup(
+    name = "files_for_docgen",
+    srcs = glob([
+        "*.ts",
+        "src/**/*.ts",
+        "PACKAGE.md",
+    ]) + [
+        "//packages/upgrade/static:files_for_docgen",
+        "//packages/upgrade/src/common:files_for_docgen",
+    ],
+)
