--- a/aio/tools/transforms/examples-package/BUILD.bazel
+++ b/aio/tools/transforms/examples-package/BUILD.bazel
@@ -1,6 +1,15 @@
 load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 load("@aio_npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
 
+filegroup(
+    name = "files",
+    srcs = glob(
+        ["**/*.js"],
+        exclude = ["**/*.spec.js"],
+    ),
+    visibility = ["//visibility:public"],
+)
+
 js_library(
     name = "examples-package",
     package_name = "aio/tools/examples-package",
