--- a/aio/tools/examples/BUILD.bazel
+++ b/aio/tools/examples/BUILD.bazel
@@ -3,6 +3,13 @@ load("@aio_npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
 
 package(default_visibility = ["//visibility:public"])
 
+exports_files(
+    [
+        "run-example-e2e.mjs",
+    ],
+    visibility = ["//aio/content/examples:__subpackages__"],
+)
+
 EXAMPLE_BOILERPLATE_SRCS = [
     "example-boilerplate.js",
     "constants.js",
