--- a/aio/tools/examples/shared/boilerplate/cli/angular.json
+++ b/aio/tools/examples/shared/boilerplate/cli/angular.json
@@ -2,6 +2,11 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "cli": {
+    "cache": {
+      "enabled": false
+    }
+  },
   "projects": {
     "angular.io-example": {
       "projectType": "application",
@@ -29,7 +34,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "preserveSymlinks": true
           },
           "configurations": {
             "production": {
