--- a/aio/package.json
+++ b/aio/package.json
@@ -101,24 +101,25 @@
     "@angular/service-worker": "^14.0.0",
     "rxjs": "~7.5.0",
     "safevalues": "^0.1.8",
+    "tar": "^6.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect-cli": "0.1400.0",
     "@angular-devkit/build-angular": "^14.0.0",
-    "@angular/dev-infra-private": "https://github.com/angular/dev-infra-private-builds.git#fed440324f82e9220f107c74c039210bd9c6ec19",
     "@angular-eslint/builder": "^13.0.0",
     "@angular-eslint/eslint-plugin": "^13.0.0",
     "@angular-eslint/eslint-plugin-template": "^13.0.0",
     "@angular-eslint/template-parser": "^13.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
+    "@angular/dev-infra-private": "https://github.com/angular/dev-infra-private-builds.git#fed440324f82e9220f107c74c039210bd9c6ec19",
     "@bazel/bazelisk": "^1.7.5",
     "@bazel/buildozer": "^5.1.0",
     "@bazel/jasmine": "^5.4.1",
-    "@bazel/typescript": "5.3.1",
     "@bazel/runfiles": "5.4.2",
+    "@bazel/typescript": "5.3.1",
     "@types/jasmine": "~3.10.0",
     "@types/lunr": "^2.3.3",
     "@types/node": "^12.7.9",
