--- a/aio/tools/ng-packages-installer/BUILD.bazel
+++ b/aio/tools/ng-packages-installer/BUILD.bazel
@@ -8,10 +8,12 @@ js_library(
     srcs = ["index.js"],
     deps = [
         "@aio_npm//@yarnpkg/lockfile",
+        "@aio_npm//archiver",
         "@aio_npm//canonical-path",
         "@aio_npm//fs-extra",
         "@aio_npm//semver",
         "@aio_npm//shelljs",
+        "@aio_npm//tar",
         "@aio_npm//yargs",
     ],
 )
