--- a/aio/tools/examples/shared/BUILD.bazel
+++ b/aio/tools/examples/shared/BUILD.bazel
@@ -3,6 +3,11 @@ load("//:packages.bzl", "AIO_EXAMPLE_PACKAGES", "to_package_label")
 
 package(default_visibility = ["//visibility:public"])
 
+exports_files([
+    "package.json",
+    "yarn.lock",
+])
+
 filegroup(
     name = "shared",
     srcs = glob(
