build(bazel): stamp targets to build, test, and serve aio against first party deps
Architect is not compatible with disabling the rules_nodejs linker so
these targets must use npm_link to link first party deps

--- a/packages/bazel/BUILD.bazel
+++ b/packages/bazel/BUILD.bazel
@@ -30,6 +30,7 @@ pkg_npm(
     # Do not add more to this list.
     # Dependencies on the full npm_package cause long re-builds.
     visibility = [
+        "//aio:__pkg__",
         "//aio/tools/examples/shared:__pkg__",
         "//integration:__subpackages__",
     ],
