--- a/packages/common/BUILD.bazel
+++ b/packages/common/BUILD.bazel
@@ -45,7 +45,7 @@ ng_package(
     # Do not add more to this list.
     # Dependencies on the full npm_package cause long re-builds.
     visibility = [
-        "//aio:__pkg__",
+        "//aio:__subpackages__",
         "//aio/tools/examples/shared:__pkg__",
         "//integration:__subpackages__",
         "//packages/bazel/test/ng_package:__pkg__",
