--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@types/multimatch": "^4.0.0",
     "@types/node": "^16.11.7",
     "@types/resize-observer-browser": "^0.1.5",
-    "@types/selenium-webdriver": "3.0.7",
+    "@types/selenium-webdriver": "^4.1.11",
     "@types/semver": "^7.3.4",
     "@types/shelljs": "^0.8.6",
     "@types/systemjs": "0.19.32",
@@ -144,7 +144,7 @@
     "rollup-plugin-preserve-shebang": "^1.0.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rxjs": "^6.6.7",
-    "selenium-webdriver": "3.5.0",
+    "selenium-webdriver": "^4.8.1",
     "semver-dsl": "^1.0.1",
     "shelljs": "^0.8.5",
     "source-map": "0.7.4",
