--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,13 +314,14 @@ jobs:
       - init_environment
       - init_saucelabs_environment
       - run:
+          - name: Start Saucelabs daemon service
+            command: bazel run //tools/saucelabs-daemon/background-service
+            background: true
+      - run:
           name: Run Bazel tests on Saucelabs
-          # See /tools/saucelabs/README.md for more info
           command: |
-            yarn bazel run //tools/saucelabs:sauce_service_setup
             TESTS=$(./node_modules/.bin/bazelisk query --output label '(kind(karma_web_test, ...) intersect attr("tags", "saucelabs", ...)) except attr("tags", "fixme-saucelabs", ...)')
-            yarn bazel test --config=saucelabs ${TESTS}
-            yarn bazel run //tools/saucelabs:sauce_service_stop
+            yarn bazel test --config=saucelabs --jobs=2 ${TESTS}
           no_output_timeout: 40m
       - notify_webhook_on_fail:
           webhook_url_env_var: SLACK_DEV_INFRA_CI_FAILURES_WEBHOOK_URL
@@ -673,6 +674,9 @@ workflows:
           requires:
             - setup
       - build-npm-packages:
+          requires:
+            - setup
+      - saucelabs:
           requires:
             - setup
       - legacy-unit-tests-saucelabs:
